@@ -1,4 +1,4 @@
-dnl $Id: configure.in.in,v 1.69 1999/09/04 21:33:18 rasmus Exp $ -*- sh -*-
+dnl $Id: configure.in.in,v 1.70 1999/09/08 12:26:31 sas Exp $ -*- sh -*-
 dnl Process this file with autoconf to produce a configure script.
 
 divert(0)
@@ -377,6 +377,14 @@ AC_ARG_WITH(apxs,
     AC_MSG_RESULT(no)
 ])
 
+AC_MSG_CHECKING(whether to enable versioning)
+AC_ARG_ENABLE(versioning,
+[  --enable-versioning],
+[
+  if test "$enableval" = "yes" ; then
+    RPATHS="-Wl,--version-script=\$(srcdir)/php.map $RPATHS"
+  fi
+])
 
 APACHE_INSTALL_FILES="$srcdir/mod_php4.* libphp4.module"
 
